<resources>
    <string name="app_name">Right-Light-WSV</string>


    <string-array name="categories">
        <item>Lamp</item>
    </string-array>

    <string-array name="lampTypes">
        <item>Boom</item>
        <item>Pico</item>
        <item>Pro 200</item>
    </string-array>

    <string name="title_activity_products">ProductsActivity</string>
    <string name="tab_text_1">all products</string>
    <string name="tab_text_2">available</string>
    <string name="tab_text_3">rented</string>
    <string name="product_details">Product Details</string>
    <string name="boom_lamp_b1">Boom Lamp - B1</string>
    <string name="available">AVAILABLE</string>
    <string name="mark_as_damaged">mark as damaged</string>
    <string name="rent_records">Rent Records</string>
    <string name="rented_lamp_text">This lamp has not been rented yet</string>
    <string name="_0712345678">number</string>
    <string name="log_in">Log In</string>
    <string name="customers">Customers</string>
    <string name="ban_customer">ban customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">Home</string>
    <string name="rent_out_product">Rent Out Product</string>
    <string name="return_product">Return Product</string>
    <string name="products">Products</string>
    <string name="monthly_reports">Monthly reports</string>
    <string name="settings">Settings</string>
    <string name="add_a_product">Add a Product</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="assign_id">Assign ID</string>
    <string name="product_id">Product ID</string>
    <string name="add_product">Add product</string>
    <string name="here">Here</string>


</resources>
